# process_card_generation_server

./: .gitignore  deploy-frontend.ps1
server/: .gitignore  main.py  pyproject.toml
server/app/: models.py  routes.py
server/app/services/: image_store.py  pdf_service.py
server/templates/: process_card.html.j2
source/: 工序卡输入模板样例.xlsx
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: page.tsx
web/components/ui/: button.tsx
