[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0",
    "litestar>=2.24.0",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "uvicorn>=0.51.0",
    "asyncpg>=0.31.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
]

# 部署到内网后想要更新依赖需要解除以下注释
# [[tool.uv.index]]
# url = "http://10.29.1.242:3003/pip/simple"
# default = true